# ctftime_scheduler_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
ctftime_sch/: main.py
src/: __init__.py  core.py  events.py  main.py  schemas.py
src/handlers/: __init__.py  ctf.py
src/keyboards/: __init__.py  menu.py
