[tool.poetry]
name = "ctftime-sch"
version = "0.1.0"
description = ""
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "ctftime_sch"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "^3.0.0"
apscheduler = "^3.10.4"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
