[tool.poetry]
name = "ctftime-sch"
version = "0.0.2"
description = ""
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "ctftime_sch"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "3.11.0"
apscheduler = "^3.10.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "FA100",
    "RET504",
    "A002",
    "ANN101",
    "SIM108",
    "S113",
    "T201",
    "RUF001",
    "DTZ005" # Only for this project
]


[tool.ruff]
target-version = "py310"
line-length = 120